<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:background="@color/md_white_1000">
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/linear_green_gradient_connectify" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/layout_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/connection_found"
                    android:textAllCaps="true"
                    android:textColor="@color/green_connectify"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_message"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/success_connection_message" />



                <ImageView
                    android:id="@+id/image_close"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/ic_close_gray_24dp"/>

            </LinearLayout>



        </LinearLayout>

        <!--<View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/bg_gradient_purple" />-->

    </LinearLayout>


    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_green_gradient_bg_connectify"
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/ic_wifi_white_24dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/success"
                android:textAllCaps="true"
                android:textColor="@color/md_white_1000"
                android:textSize="18dp"/>
        </LinearLayout>


    </LinearLayout>
</FrameLayout>